--- a/GitTest/app/src/main/res/layout/activity_main.xml
+++ b/GitTest/app/src/main/res/layout/activity_main.xml
@@ -1,12 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <fragment
-        android:id="@+id/tabs_fragment"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+    <FrameLayout
+        android:id="@+id/maincontent"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        class="com.baoyb.gittest.main.BybTabFragment"></fragment>
-</RelativeLayout>
+        android:layout_height="0dp"
+        android:layout_weight="1"></FrameLayout>
+    <View
+        android:id="@+id/divide"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:layout_above="@android:id/tabs"
+        android:background="@color/divide_gray" />
+    <android.support.v4.app.FragmentTabHost
+        android:id="@android:id/tabhost"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <FrameLayout
+            android:id="@android:id/tabcontent"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="0"></FrameLayout>
+    </android.support.v4.app.FragmentTabHost>
+
+</LinearLayout>
