--- a/GitTest/app/src/main/res/values/colors.xml
+++ b/GitTest/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#FF4081</color>
 
     <color name="divide_gray">#dddddd</color>
+    <color name="text_black">#444444</color>
+    <color name="text_gray">#999999</color>
 </resources>
