--- a/GitTest/app/src/main/res/values/dimens.xml
+++ b/GitTest/app/src/main/res/values/dimens.xml
@@ -2,4 +2,8 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <dimen name="text_12dp">12dp</dimen>
+    <dimen name="text_16dp">16dp</dimen>
+    <dimen name="text_20dp">20dp</dimen>
 </resources>
