--- a/GitTest/app/src/main/res/values/dimens.xml
+++ b/GitTest/app/src/main/res/values/dimens.xml
@@ -3,7 +3,10 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
+    <dimen name="divide_height">0.5dp</dimen>
+    <dimen name="text_10dp">21dp</dimen>
     <dimen name="text_12dp">12dp</dimen>
     <dimen name="text_16dp">16dp</dimen>
+    <dimen name="text_18dp">18dp</dimen>
     <dimen name="text_20dp">20dp</dimen>
 </resources>
