--- a/GitTest/app/src/main/res/layout/byb_fra_mine.xml
+++ b/GitTest/app/src/main/res/layout/byb_fra_mine.xml
@@ -1,9 +1,282 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="mine"/>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="none">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:gravity="center"
+                android:background="@color/head_background">
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="60dp">
+                    <ImageView
+                        android:id="@+id/ivLoginByPhone"
+                        android:layout_width="70dp"
+                        android:layout_height="70dp"
+                        android:layout_marginRight="20dp"
+                        android:src="@mipmap/ic_share_circle"/>
+                    <ImageView
+                        android:id="@+id/ivLoginByQQ"
+                        android:layout_width="70dp"
+                        android:layout_height="70dp"
+                        android:layout_marginRight="20dp"
+                        android:src="@mipmap/ic_qq"/>
+                    <ImageView
+                        android:id="@+id/ivLoginByWX"
+                        android:layout_width="70dp"
+                        android:layout_height="70dp"
+                        android:src="@mipmap/ic_wx"/>
+                </LinearLayout>
+                <TextView
+                    style="@style/text_14_gray"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginBottom="20dp"
+                    android:text="@string/mine_to_login_tips"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:background="@color/white">
+                <LinearLayout
+                    android:id="@+id/llCollection"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:background="?attr/selectableItemBackground"
+                    android:orientation="vertical">
+                    <ImageView
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:src="@mipmap/ic_collection"/>
+                    <TextView
+                        style="@style/text_12_black"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/mine_collection"/>
+                </LinearLayout>
+                <View
+                    android:layout_width="@dimen/divide_height"
+                    android:layout_height="match_parent"
+                    android:background="@color/divide_gray"/>
+                <LinearLayout
+                    android:id="@+id/llHistory"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:background="?attr/selectableItemBackground"
+                    android:orientation="vertical">
+                    <ImageView
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:src="@mipmap/ic_collection"/>
+                    <TextView
+                        style="@style/text_12_black"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/mine_history"/>
+                </LinearLayout>
+                <View
+                    android:layout_width="@dimen/divide_height"
+                    android:layout_height="match_parent"
+                    android:background="@color/divide_gray"/>
+                <LinearLayout
+                    android:id="@+id/llStyle"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:background="?attr/selectableItemBackground"
+                    android:orientation="vertical">
+                    <ImageView
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:src="@mipmap/ic_collection"/>
+                    <TextView
+                        android:id="@+id/tvStyle"
+                        style="@style/text_12_black"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/mine_style_day"/>
+                </LinearLayout>
+            </LinearLayout>
+            <include layout="@layout/byb_comm_line_divide"/>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/divide_height"
+                android:background="@color/divide_gray"
+                android:layout_marginTop="8dp"/>
+            <RelativeLayout
+                android:id="@+id/rlMessageSetting"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/mime_item_height"
+                android:gravity="center_vertical"
+                android:background="@drawable/byb_ripple_white"
+                android:paddingLeft="@dimen/activity_vertical_margin"
+                android:paddingRight="@dimen/activity_vertical_margin">
+                <TextView
+                    style="@style/textMineItem"
+                    android:text="@string/mine_message_setting"/>
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@mipmap/ic_next"
+                    android:layout_alignParentRight="true"/>
+            </RelativeLayout>
+            <include layout="@layout/byb_comm_line_divide"/>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/divide_height"
+                android:background="@color/divide_gray"
+                android:layout_marginTop="8dp"/>
+            <RelativeLayout
+                android:id="@+id/rlShop"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/mime_item_height"
+                android:gravity="center_vertical"
+                android:background="@drawable/byb_ripple_white"
+                android:paddingLeft="@dimen/activity_vertical_margin"
+                android:paddingRight="@dimen/activity_vertical_margin">
+                <TextView
+                    style="@style/textMineItem"
+                    android:text="@string/mine_shop"/>
+                <ImageView
+                    android:id="@+id/ivShopNext"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@mipmap/ic_next"
+                    android:layout_alignParentRight="true"/>
+                <TextView
+                    style="@style/text_12_gray"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toLeftOf="@id/ivShopNext"
+                    android:layout_marginRight="10dp"
+                    android:text="@string/mine_shop_tips"/>
+            </RelativeLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/divide_height"
+                android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                android:background="@color/divide_gray" />
+            <RelativeLayout
+                android:id="@+id/rlJD"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/mime_item_height"
+                android:gravity="center_vertical"
+                android:background="@drawable/byb_ripple_white"
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingRight="@dimen/activity_horizontal_margin">
+                <TextView
+                    style="@style/textMineItem"
+                    android:text="@string/mine_jd"/>
+                <ImageView
+                    android:id="@+id/ivJDNext"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@mipmap/ic_next"
+                    android:layout_alignParentRight="true"/>
+                <TextView
+                    style="@style/text_12_gray"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toLeftOf="@id/ivJDNext"
+                    android:layout_marginRight="10dp"
+                    android:text="@string/mine_jd_tips"/>
+            </RelativeLayout>
+            <include layout="@layout/byb_comm_line_divide"/>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/divide_height"
+                android:layout_marginTop="8dp"
+                android:background="@color/divide_gray" />
+            <RelativeLayout
+                android:id="@+id/rlReport"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/mime_item_height"
+                android:gravity="center_vertical"
+                android:background="@drawable/byb_ripple_white"
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingRight="@dimen/activity_horizontal_margin">
+                <TextView
+                    style="@style/textMineItem"
+                    android:text="@string/mine_i_report"/>
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@mipmap/ic_next"
+                    android:layout_alignParentRight="true"/>
+            </RelativeLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/divide_height"
+                android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                android:background="@color/divide_gray" />
+            <RelativeLayout
+                android:id="@+id/rlFeedback"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/mime_item_height"
+                android:gravity="center_vertical"
+                android:background="@drawable/byb_ripple_white"
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingRight="@dimen/activity_horizontal_margin">
+                <TextView
+                    style="@style/textMineItem"
+                    android:text="@string/mine_feedback"/>
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@mipmap/ic_next"
+                    android:layout_alignParentRight="true"/>
+            </RelativeLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/divide_height"
+                android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                android:background="@color/divide_gray" />
+
+            <RelativeLayout
+                android:id="@+id/rlSystemSetting"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/mime_item_height"
+                android:gravity="center_vertical"
+                android:background="@drawable/byb_ripple_white"
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingRight="@dimen/activity_horizontal_margin">
+                <TextView
+                    style="@style/textMineItem"
+                    android:text="@string/mine_system_setting"/>
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@mipmap/ic_next"
+                    android:layout_alignParentRight="true"/>
+            </RelativeLayout>
+            <include layout="@layout/byb_comm_line_divide"/>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="10dp"></View>
+        </LinearLayout>
+    </ScrollView>
+
 </LinearLayout>
