--- a/GitTest/app/src/main/res/values/byb_text_styles.xml
+++ b/GitTest/app/src/main/res/values/byb_text_styles.xml
@@ -1,4 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="text_"></style>
+    <style name="text_12_gray">
+        <item name="android:textColor">@color/text_gray</item>
+        <item name="android:textSize">@dimen/text_12dp</item>
+    </style>
+    <style name="text_14_gray">
+        <item name="android:textColor">@color/text_gray</item>
+        <item name="android:textSize">@dimen/text_14dp</item>
+    </style>
+
+    <style name="text_10_black">
+        <item name="android:textColor">@color/text_black</item>
+        <item name="android:textSize">@dimen/text_10dp</item>
+    </style>
+    <style name="text_12_black">
+        <item name="android:textColor">@color/text_black</item>
+        <item name="android:textSize">@dimen/text_12dp</item>
+    </style>
+    <style name="text_14_black">
+        <item name="android:textColor">@color/text_black</item>
+        <item name="android:textSize">@dimen/text_16dp</item>
+    </style>
+
+    <style name="text_14_white">
+        <item name="android:textColor">@color/text_white</item>
+        <item name="android:textSize">@dimen/text_14dp</item>
+    </style>
 </resources>
