--- a/GitTest/app/src/main/res/layout/byb_fra_tabs.xml
+++ b/GitTest/app/src/main/res/layout/byb_fra_tabs.xml
@@ -28,7 +28,7 @@
         <TabWidget
             android:id="@android:id/tabs"
             android:layout_width="match_parent"
-            android:layout_height="52dp"
+            android:layout_height="wrap_content"
             android:background="@android:color/white"
             android:divider="@android:color/transparent" />
     </LinearLayout>
