--- a/GitTest/app/src/main/res/values/dimens.xml
+++ b/GitTest/app/src/main/res/values/dimens.xml
@@ -3,9 +3,13 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
+    <!--我的 item高度-->
+    <dimen name="mime_item_height">46dp</dimen>
+
     <dimen name="divide_height">0.5dp</dimen>
     <dimen name="text_10dp">10dp</dimen>
     <dimen name="text_12dp">12dp</dimen>
+    <dimen name="text_14dp">14dp</dimen>
     <dimen name="text_16dp">16dp</dimen>
     <dimen name="text_18dp">18dp</dimen>
     <dimen name="text_20dp">20dp</dimen>
