--- a/GitTest/app/src/main/res/values/colors.xml
+++ b/GitTest/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#00000000</color>
+    <color name="colorPrimaryDark">#00000000</color>
     <color name="colorAccent">#FF4081</color>
     <color name="white">#ffffff</color>
     <!--波纹点击颜色-->
@@ -11,6 +11,7 @@
 
     <color name="background">#f5f5f5</color>
     <color name="head_background">#cdcdcd</color>
+    <color name="background_red">#ff4444</color>
     <color name="divide_gray">#dddddd</color>
     <color name="text_white">#ffffff</color>
     <color name="text_black">#444444</color>
