--- a/GitTest/app/src/main/res/layout/byb_fra_home.xml
+++ b/GitTest/app/src/main/res/layout/byb_fra_home.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -27,5 +28,30 @@
             android:background="@drawable/byb_corners_white"/>
     </LinearLayout>
 
-    <include layout="@layout/byb_fra_base_list"></include>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:background="@color/background">
+        <android.support.design.widget.TabLayout
+            android:id="@+id/tabChannel"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            app:tabIndicatorColor="@color/transparent"
+            app:tabMode="scrollable">
+
+        </android.support.design.widget.TabLayout>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="8dp"
+            android:src="@drawable/byb_channel_selector"/>
+    </LinearLayout>
+    <include layout="@layout/byb_comm_line_divide"/>
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewPager"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
 </LinearLayout>
