--- a/GitTest/app/src/main/res/values/colors.xml
+++ b/GitTest/app/src/main/res/values/colors.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#00000000</color>
-    <color name="colorPrimaryDark">#00000000</color>
-    <color name="colorAccent">#FF4081</color>
-    <color name="white">#ffffff</color>
+    <color name="colorPrimary">#ffffff</color>
+    <color name="colorPrimaryDark">#fff5f5f5</color>
+    <color name="colorAccent">#ffFF4081</color>
+    <color name="white">#ffffffff</color>
+    <color name="transparent">#00000000</color>
     <!--波纹点击颜色-->
     <!--白色点击色-->
     <color name="ripple_white">#7faaaaaa</color>
@@ -11,12 +12,12 @@
 
     <color name="background">#f5f5f5</color>
 
-    <color name="head_background">#cdcdcd</color>
-    <color name="background_red">#ff4444</color>
-    <color name="divide_gray">#dddddd</color>
+    <color name="head_background">#ffcdcdcd</color>
+    <color name="background_red">#ffff4444</color>
+    <color name="divide_gray">#ffdddddd</color>
     <color name="text_white">#ffffff</color>
-    <color name="text_black">#444444</color>
-    <color name="text_gray">#999999</color>
-    <color name="text_light_gray">#aaaaaa</color>
-    <color name="text_red">#ed4c4d</color>
+    <color name="text_black">#ff444444</color>
+    <color name="text_gray">#ff999999</color>
+    <color name="text_light_gray">#ffaaaaaa</color>
+    <color name="text_red">#ffed4c4d</color>
 </resources>
