--- a/GitTest/app/src/main/res/layout/byb_fra_home.xml
+++ b/GitTest/app/src/main/res/layout/byb_fra_home.xml
@@ -30,7 +30,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="45dp"
         android:gravity="center_vertical"
         android:background="@color/background">
         <android.support.design.widget.TabLayout
