--- a/GitTest/app/src/main/res/layout/byb_fra_comm_ui_container.xml
+++ b/GitTest/app/src/main/res/layout/byb_fra_comm_ui_container.xml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tool="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <android.support.v7.widget.Toolbar
+        xmlns:tools="http://schemas.android.com/apk/res-auto"
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        tools:titleTextAppearance="@style/text_18_black"
+        tools:titleMarginStart="0dp">
 
     </android.support.v7.widget.Toolbar>
     <include layout="@layout/byb_comm_line_divide"/>
