--- a/GitTest/app/src/main/res/values/byb_text_styles.xml
+++ b/GitTest/app/src/main/res/values/byb_text_styles.xml
@@ -19,7 +19,11 @@
     </style>
     <style name="text_14_black">
         <item name="android:textColor">@color/text_black</item>
-        <item name="android:textSize">@dimen/text_16dp</item>
+        <item name="android:textSize">@dimen/text_14dp</item>
+    </style>
+    <style name="text_18_black">
+        <item name="android:textColor">@color/text_black</item>
+        <item name="android:textSize">@dimen/text_18dp</item>
     </style>
 
     <style name="text_14_white">
