--- a/GitTest/app/src/main/res/values/styles.xml
+++ b/GitTest/app/src/main/res/values/styles.xml
@@ -9,9 +9,17 @@
         <item name="android:windowBackground">@color/background</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowAnimationStyle">@style/Window.Animation</item>
     </style>
 
     <style name="AppTheme" parent="@style/BaseAppTheme"></style>
     <style name="BybAppTheme" parent="AppTheme"></style>
-
+    
+    <style name="Window.Animation" parent="@android:style/Animation.Translucent">
+        <item name="android:activityOpenEnterAnimation">@anim/anim_window_in</item>
+        <item name="android:activityOpenExitAnimation">@anim/anim_window_out</item>
+        <item name="android:activityCloseEnterAnimation">@anim/anim_window_close_in</item>
+        <item name="android:activityCloseExitAnimation">@anim/anim_window_close_out</item>
+    </style>
 </resources>
