--- a/GitTest/app/src/main/res/layout/byb_fra_attention.xml
+++ b/GitTest/app/src/main/res/layout/byb_fra_attention.xml
@@ -2,8 +2,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="attention"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:gravity="center"
+        android:background="@color/white">
+        <TextView
+            style="@style/textTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/tab_attention"/>
+    </LinearLayout>
+    <include layout="@layout/byb_comm_line_divide"/>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="10dp"/>
+    <include layout="@layout/byb_fra_base_list"/>
 </LinearLayout>
