--- a/GitTest/app/src/main/res/layout/byb_fra_base_list.xml
+++ b/GitTest/app/src/main/res/layout/byb_fra_base_list.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.baoyb.gittest.ui.common.BybDefaultLoadingView xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/loadingView">
     <in.srain.cube.views.ptr.PtrFrameLayout
         xmlns:cube_ptr="http://schemas.android.com/apk/res-auto"
         android:id="@+id/refreshView"
@@ -20,4 +21,4 @@
             android:layout_height="match_parent"
             android:scrollbarStyle="outsideOverlay"/>
     </in.srain.cube.views.ptr.PtrFrameLayout>
-</LinearLayout>
+</com.baoyb.gittest.ui.common.BybDefaultLoadingView>
