--- a/GitTest/app/src/main/res/layout/byb_list_item_homenews_one_image.xml
+++ b/GitTest/app/src/main/res/layout/byb_list_item_homenews_one_image.xml
@@ -46,12 +46,14 @@
                     android:id="@+id/ivThreeSmallImg1"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginRight="5dp"
                     android:layout_weight="1"
                     android:src="@mipmap/ic_launcher"/>
                 <ImageView
                     android:id="@+id/ivThreeSmallImg2"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginRight="5dp"
                     android:layout_weight="1"
                     android:src="@mipmap/ic_launcher"/>
                 <ImageView
