--- a/GitTest/app/src/main/res/values/colors.xml
+++ b/GitTest/app/src/main/res/values/colors.xml
@@ -9,9 +9,11 @@
     <!--白色点击色-->
     <color name="ripple_white">#7faaaaaa</color>
     <color name="selected_white">#cceeeeee</color>
+    <!--涟绮颜色,便深色-->
+    <color name="ripple_dark">#7F444444</color>
+
 
     <color name="background">#f5f5f5</color>
-
     <color name="head_background">#ffcdcdcd</color>
     <color name="background_red">#ffff4444</color>
     <color name="divide_gray">#ffdddddd</color>
@@ -20,4 +22,9 @@
     <color name="text_gray">#ff999999</color>
     <color name="text_light_gray">#ffaaaaaa</color>
     <color name="text_red">#ffed4c4d</color>
+
+    <!--以下是按钮颜色-->
+    <color name="button_red">#f55656</color>
+    <color name="button_red_focus">#d54546</color>
+    <color name="button_red_unenabled">#f2c7cb</color>
 </resources>
