--- a/GitTest/app/src/main/res/values/themes.xml
+++ b/GitTest/app/src/main/res/values/themes.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!--字体相关主题-->
+    <style name="textTitle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/text_gray</item>
+        <item name="android:textSize">@dimen/text_20dp</item>
+    </style>
     <!--tab-->
     <style name="textTabItem">
         <item name="android:layout_width">wrap_content</item>
@@ -30,4 +36,12 @@
         <item name="android:textSize">@dimen/text_14dp</item>
     </style>
 
+
+    <style name="button" parent="Widget.AppCompat.ActionButton">
+        <item name="android:background">@drawable/byb_selector_btn_red_corner_border</item>
+        <item name="android:textAppearance">@style/text_14_white</item>
+        <item name="android:selectable">false</item>
+        <item name="android:minHeight">40dip</item>
+        <item name="android:minWidth">80dip</item>
+    </style>
 </resources>
