--- a/GitTest/app/src/main/res/values/url.xml
+++ b/GitTest/app/src/main/res/values/url.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="url_home">toutiao/get_list</string>
+    <string name="url_img">data/福利/10/</string>
 </resources>
