--- a/GitTest/app/src/main/res/layout/byb_fra_mobile_search.xml
+++ b/GitTest/app/src/main/res/layout/byb_fra_mobile_search.xml
@@ -4,9 +4,72 @@
     android:layout_height="match_parent">
 
     <EditText
+        android:id="@+id/etMobile"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:inputType="number"
         android:hint="请输入电话号码"/>
+
+    <LinearLayout
+        android:id="@+id/llSearchContent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/etMobile"
+        android:background="@color/white"
+        android:layout_marginTop="20dp"
+        android:padding="@dimen/activity_horizontal_margin"
+        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                style="@style/textNewsListTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="20dp"
+                android:text="号    码:"/>
+            <TextView
+                android:id="@+id/tvMobile"
+                style="@style/textTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="浙江"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_marginTop="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                style="@style/textNewsListTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="20dp"
+                android:text="地    区:"/>
+            <TextView
+                android:id="@+id/tvProvince"
+                style="@style/textTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="浙江"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_marginTop="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                style="@style/textNewsListTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="20dp"
+                android:text="运营商:"/>
+            <TextView
+                android:id="@+id/tvCompany"
+                style="@style/textTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="浙江"/>
+        </LinearLayout>
+    </LinearLayout>
 
     <Button
         android:id="@+id/btnMobileSearch"
