--- a/GitTest/app/src/main/res/layout/byb_fra_mobile_search.xml
+++ b/GitTest/app/src/main/res/layout/byb_fra_mobile_search.xml
@@ -3,11 +3,14 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <EditText
+    <com.baoyb.gittest.view.ClearEditText
         android:id="@+id/etMobile"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:inputType="number"
+        android:layout_marginTop="30dp"
+        android:padding="15dp"
+        android:background="@color/white"
         android:hint="请输入电话号码"/>
 
     <LinearLayout
