--- a/GitTest/app/src/main/res/values/dimens.xml
+++ b/GitTest/app/src/main/res/values/dimens.xml
@@ -13,4 +13,5 @@
     <dimen name="text_16dp">16dp</dimen>
     <dimen name="text_18dp">18dp</dimen>
     <dimen name="text_20dp">20dp</dimen>
+    <dimen name="text_24dp">24dp</dimen>
 </resources>
