--- a/GitTest/app/src/main/res/layout/byb_fra_home.xml
+++ b/GitTest/app/src/main/res/layout/byb_fra_home.xml
@@ -4,10 +4,10 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
+        android:clipToPadding="true"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:gravity="center_vertical"
