--- a/GitTest/app/src/main/res/values/colors.xml
+++ b/GitTest/app/src/main/res/values/colors.xml
@@ -15,7 +15,7 @@
 
     <color name="background">#f5f5f5</color>
     <color name="head_background">#ffcdcdcd</color>
-    <color name="background_red">#ffff4444</color>
+    <color name="background_red">#ff4444</color>
     <color name="divide_gray">#ffdddddd</color>
     <color name="text_white">#ffffff</color>
     <color name="text_black">#ff444444</color>
