--- a/GitTest/app/src/main/res/layout/byb_list_item_test.xml
+++ b/GitTest/app/src/main/res/layout/byb_list_item_test.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="50dp"
     android:paddingLeft="15dp"
     android:paddingRight="15dp"
     android:layout_gravity="center_vertical"
