--- a/GitTest/app/src/main/res/values/byb_text_styles.xml
+++ b/GitTest/app/src/main/res/values/byb_text_styles.xml
@@ -1,5 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <style name="text_12_red">
+        <item name="android:textColor">@color/text_red</item>
+        <item name="android:textSize">@dimen/text_12dp</item>
+    </style>
+    <style name="text_14_red">
+        <item name="android:textColor">@color/text_red</item>
+        <item name="android:textSize">@dimen/text_14dp</item>
+    </style>
+
     <style name="text_12_gray">
         <item name="android:textColor">@color/text_gray</item>
         <item name="android:textSize">@dimen/text_12dp</item>
