--- a/GitTest/app/src/main/res/layout/byb_fra_home.xml
+++ b/GitTest/app/src/main/res/layout/byb_fra_home.xml
@@ -43,6 +43,7 @@
 
         </android.support.design.widget.TabLayout>
         <ImageView
+            android:id="@+id/ivEditChannel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="8dp"
