--- a/GitTest/app/src/main/res/layout/byb_fra_base_list.xml
+++ b/GitTest/app/src/main/res/layout/byb_fra_base_list.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.baoyb.gittest.ui.common.BybDefaultLoadingView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.baoyb.defaultloadinglibrary.DefaultLoadingView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -21,4 +22,4 @@
             android:layout_height="match_parent"
             android:scrollbarStyle="outsideOverlay"/>
     </in.srain.cube.views.ptr.PtrFrameLayout>
-</com.baoyb.gittest.ui.common.BybDefaultLoadingView>
+</com.baoyb.defaultloadinglibrary.DefaultLoadingView>
